# embodia

./: .gitignore  README.md  README_CN.md  pyproject.toml
docs/: collection_guide.md  examples_guide.md  lerobot_bridge.md  mixin_guide.md  plain_objects_guide.md  yaml_config_example.yml
docs/superpowers/plans/: 2026-04-26-inferaxis-refactor.md  2026-04-26-scheduler-v2-realtime.md  2026-04-27-aggressive-slimdown.md
docs/superpowers/specs/: 2026-04-26-inferaxis-refactor-design.md  2026-04-26-scheduler-v2-realtime-design.md  2026-04-27-aggressive-slimdown-design.md
examples/: 00_mixin_quickstart.py  01_mixin_from_scratch.py  01_robot_data_collection.py  01_sync_inference.py  02_async_inference.py  02_rollout_loop.py  02_wrap_existing_classes.py  03_data_collection.py  03_inference_runtime.py  03_rollout_loop.py  04_lerobot_bridge.py  04_pi06star_pi05_policy.py  04_replay_collected_data.py  05_profile_inference_latency.py  05_robot_data_collection.py  06_async_inference_with_rtc.py  06_lerobot_bridge.py  07_benchmark_runtime.py  README.md  basic_runtime.yml  basic_usage.py  structural_compatibility.py
examples/remote/: openpi_policy_source.py  robot_with_embodia_remote_policy.py  robot_with_inferaxis_remote_policy.py  serve_embodia_policy.py  serve_inferaxis_policy.py
src/embodia/: __init__.py  __main__.py
src/embodia/contrib/: __init__.py  lerobot.py  openpi.py  openpi_remote.py  openpi_transform.py  remote.py  remote_transform.py  remote_transport.py
src/embodia/core/: __init__.py  arraylike.py  base.py  config_io.py  config_keys.py  errors.py  mixins.py  protocols.py  schema.py  transform.py
src/embodia/core/mixins/: __init__.py  common.py  config_utils.py  model.py  policy.py  resolution_utils.py  robot.py
src/embodia/core/modalities/: __init__.py  _common.py  action_modes.py  images.py  state.py  task.py
src/embodia/core/transform/: __init__.py  coerce.py  export.py  remap.py
src/embodia/runtime/: __init__.py  _dispatch.py  action_source.py  check_utils.py  checks.py  coerce.py  collect.py  flow.py  h5.py
src/embodia/runtime/inference/: __init__.py  async_inference.py  chunk_scheduler.py  common.py  engine.py  optimizers.py  profile.py  protocols.py
src/embodia/runtime/shared/: __init__.py  action_source.py  coerce.py  dispatch.py  sequence.py
src/inferaxis/: __init__.py  __main__.py
src/inferaxis/contrib/: __init__.py  openpi.py  remote.py  remote_transform.py  remote_transport.py
src/inferaxis/core/: __init__.py  arraylike.py  command_kinds.py  config_io.py  config_keys.py  errors.py  protocols.py  schema.py  schema_compat.py  schema_models.py  schema_validation.py
src/inferaxis/core/mixins/: common.py  policy.py  robot.py
src/inferaxis/core/modalities/: __init__.py  _common.py  meta.py  state.py  task.py
src/inferaxis/core/transform/: __init__.py  coerce.py  export.py  remap.py
src/inferaxis/runtime/: __init__.py  checks.py  flow.py
src/inferaxis/runtime/inference/: __init__.py  _engine_config.py  _engine_scheduler.py  _profile_logging.py  _profile_models.py  _profile_public.py  (+13 more)
src/inferaxis/shared/: __init__.py  action_source.py  coerce.py  common.py  sequence.py
tests/: __init__.py  helpers.py  test_inference_runtime.py  test_interfaces.py  test_internal_architecture.py  test_openpi.py  test_openpi_remote.py  test_profiling.py  test_remote.py  test_runtime_engine.py  test_scheduler.py  test_scheduler_components.py  test_yaml_config.py
tmp/: episode_0007.jsonl
(+43 files in other folders)
