[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embodia"
version = "0.1.0"
description = "Unified runtime interfaces for robots and models."
readme = "README.md"
requires-python = ">=3.11"
keywords = ["robotics", "embodied-ai", "interfaces", "runtime", "models"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["numpy>=1.26,<3"]

[project.optional-dependencies]
yaml = ["PyYAML>=6.0"]
remote = ["msgpack>=1.0.5", "websockets>=11.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
embodia = ["py.typed"]
